修复连接的结构旋转，平移时的表现